fix: gap in business_info

--- a/src/pages/seller-pages/SellerProfilePage/SellerProfilePage.module.scss
+++ b/src/pages/seller-pages/SellerProfilePage/SellerProfilePage.module.scss
@@ -41,18 +41,14 @@
   .content_container {
     grid-template-areas:
       'personal_info business_info'
-      'notifications account_managment';
+      'account_managment notifications';
     grid-template-columns: minmax(auto, 500px) minmax(auto, 700px);
-    gap: 24px;
     padding: 12px 16px;
   }
 
-  .account_management {
-    gap: 30px;
-  }
 
   .business_info > div {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
 
 }
@@ -66,10 +62,6 @@
     padding: 32px;
   }
 
-
-  .account_management {
-    gap: 30px;
-  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -86,11 +78,14 @@
     padding: 16px 32px;
   }
 
+  .business_info > div {
+    margin-bottom: 10px;
+  }
+
 }
 
 @media only screen and (max-width: 485px) {
   .content_container {
-    gap: 20px;
     padding: 12px 0 32px;
   }
 
@@ -98,9 +93,6 @@
     margin-bottom: 32px;
   }
 
-  .business_info > div:nth-child(2) {
-    margin-bottom: 18px;
-  }
 
   .notifications, .business_profile, .personal_info, .account_management > div, .section {
     padding: 16px;
